--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=virtualdream
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.url=jdbc:postgresql://localhost:5432/sv
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
